Revert to using commons-codec for Base64 codec-ing
Fixes runtime failures on JRE 11.

See https://github.com/Yubico/yubico-java-client/issues/21